--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "proxy": "http://localhost:3333",
   "dependencies": {
-    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.4.3",
